--- a/linechart/package.json
+++ b/linechart/package.json
@@ -15,8 +15,10 @@
   "dependencies": {
     "@types/d3": "5.7.2",
     "d3": "5.12.0",
-    "powerbi-visuals-api": "5.1.0",
-    "powerbi-visuals-utils-formattingmodel": "5.0.0"
+    "powerbi-models": "^1.12.6",
+    "powerbi-visuals-api": "^5.1.0",
+    "powerbi-visuals-utils-formattingmodel": "5.0.0",
+    "powerbi-visuals-utils-interactivityutils": "^6.0.2"
   },
   "devDependencies": {
     "ts-loader": "6.1.0",
